--- a/ExampleOpenGL.vcxproj.filters
+++ b/ExampleOpenGL.vcxproj.filters
@@ -47,6 +47,12 @@
     <None Include="default.frag">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="texture.vert">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="texture.frag">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaderClass.h">
